Created UI elements for DetailsVC, retrieve weather forecast details

--- a/HQ iOS Test Project/HotelQuicklyRound1/HotelQuicklyRound1/Base.lproj/Main.storyboard
+++ b/HQ iOS Test Project/HotelQuicklyRound1/HotelQuicklyRound1/Base.lproj/Main.storyboard
@@ -113,8 +113,37 @@
                     <view key="view" contentMode="scaleToFill" id="Jjl-Ui-7mb">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="q2o-Q5-ES5">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WeatherForecastCellID" id="b0N-fg-PWT">
+                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="b0N-fg-PWT" id="x7d-O0-si7">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="R3e-Or-yw6" id="u8P-bZ-MHp"/>
+                                    <outlet property="delegate" destination="R3e-Or-yw6" id="02e-o2-Bnf"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="lDz-NJ-ZaR" firstAttribute="top" secondItem="q2o-Q5-ES5" secondAttribute="bottom" id="Cgo-IW-gB3"/>
+                            <constraint firstItem="q2o-Q5-ES5" firstAttribute="top" secondItem="Jjl-Ui-7mb" secondAttribute="top" id="Ph4-et-jyu"/>
+                            <constraint firstAttribute="trailing" secondItem="q2o-Q5-ES5" secondAttribute="trailing" id="eLp-H8-BwW"/>
+                            <constraint firstItem="q2o-Q5-ES5" firstAttribute="leading" secondItem="Jjl-Ui-7mb" secondAttribute="leading" id="gxv-vz-zQt"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="weatherForecastTableView" destination="q2o-Q5-ES5" id="FDu-pe-LBu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rEL-HN-Pzb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
